<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="StartQADataBean"
            type="com.ycf.qaapi.viewModel.dataBean.StartQADataBean"/>
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@null">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name"
                android:background="@color/light_blue">

            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@null">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/LinkDefInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@={StartQADataBean.customSchema}"
                    android:hint="@string/inputLinkDef"
                    />
                <Button
                    android:id="@+id/changeLinkDefBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/changeLinkDef"
                    android:changeSchemaListener="@{StartQADataBean}"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="vertical"
                android:background="@null"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@null">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/paramsInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:saveUserInput="@{StartQADataBean}"
                    android:text="@={StartQADataBean.userInput}"
                    android:hint="@string/inputParams"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="@null"
                    >
                    <Button
                        android:id="@+id/startBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:addStartQAListener="@{StartQADataBean}"/>
                    <Button
                        android:id="@+id/startSelfBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startSelf"
                        android:addStartSelfListener="@{StartQADataBean}"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blankView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="vertical"
                android:background="@null"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@null">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/echoQALinkParams"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paramsList"/>
                <TextView
                    android:id="@+id/paramsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>